# presale-scaffold-solana

./: Anchor.toml
programs/ido/: Cargo.toml
programs/ido/src/: lib.rs  state.rs
programs/ido/src/instructions/: buy_token.rs  mod.rs
tests/: ido.ts
